<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingTop="@dimen/calc_column_spacing_sci"
    android:scrollbars="none"
    android:paddingRight="@dimen/calc_column_spacing_sci"
    android:paddingLeft="@dimen/calc_column_spacing_sci">

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sci_button_height"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/image_button_bracket_open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:tag="@string/tag_bracket_open"
                android:scaleType="center"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/bracket_open"/>
            <ImageButton
                android:id="@+id/image_button_bracket_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:tag="@string/tag_bracket_close"
                android:scaleType="center"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/bracket_close"/>
            <ImageButton
                android:id="@+id/image_button_ln"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:tag="@string/tag_ln"
                android:scaleType="center"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/ln"/>
            <ImageButton
                android:id="@+id/image_button_log"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:tag="@string/tag_log"
                android:scaleType="center"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/log"/>
            <ImageButton
                android:id="@+id/image_button_ten_raise_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="@string/tag_ten_raise_x"
                android:scaleType="center"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/ten_raise_x"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sci_button_height"
            android:layout_marginTop="@dimen/calc_column_spacing_sci"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/image_button_x_inverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:src="@drawable/x_inverse"
                android:scaleType="center"
                android:tag="@string/tag_inverse"/>
            <ImageButton
                android:id="@+id/image_button_square"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/x_square"
                android:scaleType="center"
                android:tag="@string/tag_square"/>
            <ImageButton
                android:id="@+id/image_button_qube"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/x_qube"
                android:scaleType="center"
                android:tag="@string/tag_cube"/>
            <ImageButton
                android:id="@+id/image_button_raise_y"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/x_rais_y"
                android:scaleType="center"
                android:tag="@string/tag_raise_y"/>
            <ImageButton
                android:id="@+id/image_button_e_raise_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/e_raise_x"
                android:scaleType="center"
                android:tag="@string/tag_e_raise_x"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sci_button_height"
            android:layout_marginTop="@dimen/calc_column_spacing_sci"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/image_button_x_fact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/x_fact"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_fact"/>
            <ImageButton
                android:id="@+id/image_button_square_root"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/square_root_x"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_square_root"/>
            <ImageButton
                android:id="@+id/image_button_qube_root"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/qube_root_x"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_cube_root"/>
            <ImageButton
                android:id="@+id/image_button_x_root"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/x_root_y"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_x_root"/>
            <ImageButton
                android:id="@+id/image_button_e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/e"
                android:scaleType="center"
                android:tag="@string/tag_e"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sci_button_height"
            android:layout_marginTop="@dimen/calc_column_spacing_sci"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/image_button_sin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/sin"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_sin"/>
            <ImageButton
                android:id="@+id/image_button_cos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/cos"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_cos"/>
            <ImageButton
                android:id="@+id/image_button_tan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:src="@drawable/tan"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:scaleType="center"
                android:tag="@string/tag_tan"/>
            <ImageButton
                android:id="@+id/image_button_pi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:src="@drawable/pi"
                android:scaleType="center"
                android:tag="@string/tag_pi"/>
            <ImageButton
                android:id="@+id/image_button_none1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black_dark"
                android:src="@null"
                android:scaleType="center"
                android:tag="n/a"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sci_button_height"
            android:layout_marginTop="@dimen/calc_column_spacing_sci"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/image_button_sinh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:src="@drawable/sinh"
                android:scaleType="center"
                android:tag="@string/tag_sinh"/>
            <ImageButton
                android:id="@+id/image_button_cosh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:src="@drawable/cosh"
                android:scaleType="center"
                android:tag="@string/tag_cosh"/>
            <ImageButton
                android:id="@+id/image_button_tanh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_black"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:src="@drawable/tanh"
                android:scaleType="center"
                android:tag="@string/tag_tanh"/>
            <ImageButton
                android:id="@+id/image_button_none2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black_dark"
                android:layout_marginRight="@dimen/calc_column_spacing_sci"
                android:src="@null"
                android:scaleType="center"
                android:tag="n/a"/>
            <ImageButton
                android:id="@+id/image_button_none3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black_dark"
                android:src="@null"
                android:scaleType="center"
                android:tag="n/a"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>