<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <HorizontalScrollView
        android:id="@+id/hscroll_display_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_marginLeft="@dimen/calc_column_spacing"
        android:layout_marginRight="@dimen/calc_column_spacing"
        android:background="@color/silver_medium"
        android:scrollbars="none">
        <TextView
            android:id="@+id/text_display_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:paddingLeft="@dimen/display_padding"
            android:paddingRight="@dimen/display_padding"
            android:paddingTop="@dimen/display_padding_vertical"
            android:textSize="@dimen/display_one_text_size"
            android:textIsSelectable="true" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hscroll_display_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_marginLeft="@dimen/calc_column_spacing"
        android:layout_marginRight="@dimen/calc_column_spacing"
        android:background="@color/silver_medium"
        android:scrollbars="none">

        <TextView
            android:id="@+id/text_display_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:lines="1"
            android:layout_marginLeft="@dimen/calc_column_spacing"
            android:layout_marginRight="@dimen/calc_column_spacing"
            android:background="@color/silver_medium"
            android:paddingLeft="@dimen/display_padding"
            android:paddingRight="@dimen/display_padding"
            android:paddingBottom="@dimen/display_padding_vertical"
            android:textSize="@dimen/display_two_text_size"
            android:textIsSelectable="true" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/button_sci_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sci_header_height"
        android:background="@drawable/bg_header_black"
        android:layout_marginRight="@dimen/calc_column_spacing"
        android:layout_marginLeft="@dimen/calc_column_spacing"
        android:text="@string/scientific"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sci_header_text_size" />

    <ViewStub
        android:id="@+id/stub_sci_calc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:inflatedId="@+id/layout_scientific_calc"
        android:layout="@layout/layout_scientific_calc" />

    <LinearLayout
        android:id="@+id/layout_calc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/bg_basic_calc"
        android:orientation="vertical"
        android:padding="@dimen/calc_column_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="2"
                android:background="@drawable/bg_button_blue"
                android:src="@drawable/del"
                android:tag="@string/tag_del"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_percentage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_red"
                android:src="@drawable/percent"
                android:tag="@string/tag_percentage"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_addition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_green"
                android:src="@drawable/addition"
                android:tag="@string/tag_addition"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/calc_column_spacing"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/seven"
                android:tag="@string/tag_seven"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/eight"
                android:tag="@string/tag_eight"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/nine"
                android:tag="@string/tag_nine"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_substract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_green"
                android:src="@drawable/substract"
                android:tag="@string/tag_substract"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/calc_column_spacing"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/four"
                android:tag="@string/tag_four"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/five"
                android:tag="@string/tag_five"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/six"
                android:tag="@string/tag_six"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_green"
                android:src="@drawable/multiply"
                android:tag="@string/tag_multiply"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/calc_column_spacing"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/one"
                android:tag="@string/tag_one"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/two"
                android:tag="@string/tag_two"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/three"
                android:tag="@string/tag_three"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_green"
                android:src="@drawable/division"
                android:tag="@string/tag_division"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/calc_column_spacing"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="2"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/zero"
                android:tag="@string/tag_zero"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_decimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/calc_column_spacing"
                android:layout_weight="1"
                android:background="@drawable/bg_button_silver"
                android:src="@drawable/decimal"
                android:tag="@string/tag_decimal"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:id="@+id/image_button_equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_green"
                android:src="@drawable/equals"
                android:tag="@string/tag_equals"
                android:scaleType="center"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </LinearLayout>

</merge>